<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_200"
    android:layout_height="@dimen/dp_200"
    android:background="@drawable/popup_view_shape"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi_popup"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="visible"
            app:indicatorColor="@color/colorAnimationcolor"
            app:indicatorName="TriangleSkewSpinIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/popup_textname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/popup_text"
            android:textSize="@dimen/sp_15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avi_popup"
            app:layout_constraintVertical_bias="0.17" />

        <TextView
            android:id="@+id/popup_textuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/popup_textuser"
            android:textSize="@dimen/sp_15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_textname"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_use"
            android:layout_width="80dp"
            android:layout_height="21dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:background="@color/colorupload_popupwindos"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:text="@string/popup_button_text"
            android:textColor="@color/popup_use_textcolor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_alter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_textuser"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_alter"
            android:layout_width="75dp"
            android:layout_height="21dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="8dp"
            android:background="#EDFFFFFF"
            android:textSize="@dimen/sp_15"
            android:gravity="center"
            android:text="@string/popup_button_alter"
            android:textColor="@color/popup_use_textcolor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_use"
            app:layout_constraintTop_toBottomOf="@+id/popup_textuser"
            app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
