<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    tools:layout_editor_absoluteY="@dimen/dp_25">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@mipmap/close_xx"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/text_loge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:gravity="center_horizontal"
        android:text="欢迎登陆第一通航"
        android:textColor="@color/colorLogin_text"
        android:textSize="@dimen/sp_25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar_login"
        app:layout_constraintVertical_bias="0.094"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtext_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_43"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="@dimen/dp_44"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:hint="@string/login_phone"
        android:inputType="number"
        android:maxLength="11"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_loge"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_47"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginRight="@dimen/dp_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtext_phone"
        app:layout_constraintVertical_bias="0.033"
        tools:ignore="MissingConstraints">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/edtext_code"
            android:maxLength="4"
            android:hint="@string/login_code"
            />

        <TextView
            android:id="@+id/text_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/dp_2"
            android:layout_marginRight="@dimen/dp_2"
            android:layout_marginBottom="@dimen/dp_21"
            android:text="@string/login_text_code"
            android:textSize="@dimen/sp_15" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:text="@string/login_text_reminder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/button_login"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_47"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:src="@mipmap/login_loge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:text="我已阅读并同意用户协议"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dp_330"
        android:layout_height="@dimen/dp_49"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_72"
        android:src="@mipmap/thirdpartylogin_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_41"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/wechar_image"
            android:layout_width="@dimen/dp_80"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="@dimen/dp_0"
            android:layout_marginLeft="@dimen/dp_0"
            android:src="@mipmap/wechar_icon" />

        <ImageView
            android:id="@+id/qq_image"
            android:layout_width="@dimen/dp_80"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_toEndOf="@+id/wechar_image"
            android:layout_toRightOf="@+id/wechar_image"
            android:src="@mipmap/qq_icon" />

        <ImageView
            android:id="@+id/microblog_image"
            android:layout_width="@dimen/dp_80"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="@dimen/dp_39"
            android:layout_marginLeft="@dimen/dp_39"
            android:layout_marginEnd="@dimen/dp_1"
            android:layout_marginRight="@dimen/dp_1"
            android:layout_toEndOf="@+id/qq_image"
            android:layout_toRightOf="@+id/qq_image"
            android:src="@mipmap/microblog_icon" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>